# INF8808_Projet

./: .gitignore  pyproject.toml  requirements.txt
mockups/: medailles_categories_groupeage.py  visualisation_2.py  visualisation_3.py  visualisation_5.py  visualisation_6.py  visualisation_7.py
website/: app.py  server.py  utils.py  visualisation_1.py  visualisation_2.py  visualisation_3.py  visualisation_5.py  visualisation_6.py  visualisation_7.py
