[project]
name = "projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.0",
    "flask-failsafe>=0.2",
    "folium>=0.19.5",
    "geojson>=3.2.0",
    "mapclassify>=2.8.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyqt5>=5.15.11",
    "seaborn>=0.13.2",
]
